Fixed Team Member Spacing on Mobile
The min-height for each .TeamMember div is now set to inherit, instead
of a fixed pixel value.

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -208,6 +208,7 @@
       width: calc(50% - 5px);
       margin-bottom: 10px;
       height: auto;
+      min-height: inherit;
     }
   }
 }
